test/fail/duplicate-import2.mo
import { type T } "duplicate-import/A";
import { type T } "duplicate-import/B";

ignore f;
